force-app/main/default/objects/MUSW__Template_Field_Mapping__c/MUSW__Template_Field_Mapping__c.object-meta.xml
<CustomObject>
    <description>Field mapping between template object (e.g. Milestone Template) and actual object (e.g. Milestone).</description>
    <label>Template Field Mapping</label>
    <nameField>
        <label>Template Field Mapping Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Template Field Mappings</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>