force-app/main/default/objects/MUSW__Template_Field_Mapping__c/fields/MUSW__Target_Field_Name__c.field-meta.xml
<CustomField>
    <fullName>MUSW__Target_Field_Name__c</fullName>
    <description>API name of the field on the target object that should match the template object field.</description>
    <inlineHelpText>API name of the field on the target object that should match the template object field.</inlineHelpText>
    <label>Target Field Name</label>
    <length>60</length>
    <type>Text</type>
</CustomField>