force-app/main/default/objects/MUSW__Template_Field_Mapping__c/fields/MUSW__Template_Field_Name__c.field-meta.xml
<CustomField>
    <fullName>MUSW__Template_Field_Name__c</fullName>
    <description>API name of the field on the template object.</description>
    <inlineHelpText>API name of the field on the template object.</inlineHelpText>
    <label>Template Field Name</label>
    <length>60</length>
    <type>Text</type>
</CustomField>