force-app/main/default/objects/MUSW__Template_Field_Mapping__c/fields/MUSW__Template_Object_Mapping__c.field-meta.xml
<CustomField>
    <fullName>MUSW__Template_Object_Mapping__c</fullName>
    <description>The mapping between template object and target object.</description>
    <label>Template Object Mapping</label>
    <referenceTo>MUSW__Template_Object_Mapping__c</referenceTo>
    <relationshipLabel>Template Field Mappings</relationshipLabel>
    <relationshipName>Template_Field_Mappings</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>